// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataSourcesEditForm /> should display an error with an empty source name 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
}

.emotion-1 {
  margin-top: 0;
  max-width: 600px;
  color: #b3b3b3;
}

.emotion-2 {
  width: 470px;
  padding-bottom: 24px;
}

.emotion-3 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-5 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-6 {
  position: relative;
}

.emotion-7 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid #c92300;
  border-width: 2px;
}

.emotion-7:focus,
.emotion-7 .noop {
  border: 2px solid #73b61c;
  outline: #73b61c;
  color: #000000;
  background-color: #ffffff;
}

.emotion-7:hover,
.emotion-7 .noop {
  border: 2px solid #ffffff;
}

.emotion-8 {
  padding-top: 8px;
}

.emotion-9 {
  color: #c92300;
  font-style: italic;
  white-space: pre-line;
}

.emotion-11 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-12 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-13:hover div,
.emotion-13:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-13:hover button,
.emotion-13:focus-within button {
  color: #ffffff;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-15 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-15:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-16:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-17 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-18 {
  font-size: 15px;
  line-height: 19px;
  padding-bottom: 8px;
}

.emotion-19 {
  padding-bottom: 8px;
}

.emotion-22 {
  clear: both;
  padding-bottom: 16px;
  color: #b3b3b3;
}

.emotion-23 {
  clear: both;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-bottom: 16px;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-26 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-27 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-28 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-29 {
  padding-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 16px;
}

.emotion-31 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-40 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-bottom: 16px;
}

.emotion-43 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 2px;
  cursor: not-allowed;
}

.emotion-44 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
}

.emotion-45 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
  fill: #73b61c;
}

.emotion-49 {
  height: 8px;
}

.emotion-51 {
  margin: 0;
  padding-top: 8px;
  color: #b3b3b3;
}

.emotion-52 {
  padding-top: 16px;
}

.emotion-53 {
  border-radius: 2px;
  background-color: #3b3b3b;
}

.emotion-53:hover summary svg {
  opacity: 1;
}

.emotion-54 {
  list-style-type: none;
  padding: 16px;
  background-color: #3b3b3b;
}

.emotion-54::-webkit-details-marker {
  display: none;
}

.emotion-54:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-56 {
  color: #808080;
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-57 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: -2px;
  padding-left: 16px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-58 {
  border-top: 1px solid #4a4a4a;
  padding: 32px;
  padding-top: 16px;
}

.emotion-59 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 8px;
}

.emotion-60 li {
  width: 33%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
}

.emotion-60 svg {
  color: #73b61c;
  margin-right: 16px;
  min-width: 20px;
  max-width: 20px;
}

.emotion-60 span {
  font-weight: 700;
  color: #ffffff;
}

.emotion-61 {
  padding-top: 16px;
}

.emotion-66 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
}

.emotion-68 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  max-width: 600px;
}

.emotion-69 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 32px;
}

.emotion-70 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-71 {
  clear: both;
}

.emotion-72 {
  color: #ffffff;
  text-align: left;
}

.emotion-72 th,
.emotion-72 td {
  padding: 16px;
  padding-left: 0;
}

.emotion-72 th:first-of-type,
.emotion-72 td:first-of-type {
  padding-left: 16px;
}

.emotion-72 th:nth-of-type(2),
.emotion-72 td:nth-of-type(2) {
  min-width: 300px;
}

.emotion-72 th:nth-of-type(3),
.emotion-72 td:nth-of-type(3) {
  width: 100%;
}

.emotion-72 th {
  color: #b3b3b3;
  font-weight: 500;
  white-space: nowrap;
}

.emotion-72 td {
  border-top: 1px solid #4a4a4a;
  vertical-align: top;
}

.emotion-72 td:first-of-type {
  border: none;
}

.emotion-72 td:nth-of-type(2) {
  font-family: Roboto Mono;
}

.emotion-72 tr:hover td {
  background-color: #4a4a4a;
}

.emotion-72 tr:hover+tr td {
  border-top-color: transparent;
}

.emotion-72 tr:last-of-type td {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-72 tr:last-of-type td:first-of-type {
  border: none;
}

.emotion-73 {
  cursor: not-allowed;
}

.emotion-74 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

.emotion-79 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-80 {
  margin-right: 16px;
}

.emotion-82 {
  cursor: pointer;
}

.emotion-122 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-122 button,
.emotion-122 a {
  margin-right: 16px;
}

.emotion-123 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-123,
.emotion-123:hover,
.emotion-123:visited,
.emotion-123 .noop {
  background-color: #808080;
}

.emotion-123:hover,
.emotion-123 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-123[aria-disabled=true],
.emotion-123 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-124 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-124,
.emotion-124:hover,
.emotion-124:visited,
.emotion-124 .noop {
  background-color: #73b61c;
}

.emotion-124:hover,
.emotion-124 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-124[aria-disabled=true],
.emotion-124 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
  action=""
  className="emotion-0"
  method="post"
  onSubmit={[Function]}
>
  <p
    className="emotion-1"
  >
    Additional file types or analysis modules can be added to this data source. All previous selections will remain constant and cannot be modified.
  </p>
  <div
    className="emotion-2"
  >
    <h3
      className="emotion-3"
    >
      STEP 1: Data Source Name 
    </h3>
    <div
      className="emotion-4"
    >
      <label
        className="emotion-5"
        htmlFor="name"
      >
        Name
      </label>
      <div
        className="emotion-6"
      >
        <input
          autoFocus={true}
          className="emotion-7"
          disabled={false}
          id="name"
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-8"
      >
        <span
          className="emotion-9"
        >
          Name cannot be empty
        </span>
         
      </div>
    </div>
    <h3
      className="emotion-3"
    >
      Storage Address: gs://zorroa-dev-data/images
    </h3>
  </div>
  <fieldset
    className="emotion-11"
  >
    <legend
      className="emotion-12"
    >
      STEP 2: Add Additional File Types
      <div
        className="emotion-13"
      >
        <button
          aria-details="SupportedFile Types"
          aria-label="Supported File Types"
          className="emotion-14"
          type="button"
        >
          <svg
            data-file-name="help.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-15"
          id="SupportedFile Types"
          role="tooltip"
        >
          <div
            className="emotion-16"
          />
          <div
            className="emotion-17"
          >
            <h3
              className="emotion-18"
            >
              Supported File Types
            </h3>
            <div
              className="emotion-19"
            >
              <h4>
                Images
                :
              </h4>
              GIF, PNG, JPG, JPEG, TIF, TIFF, PSD
            </div>
            <div
              className="emotion-19"
            >
              <h4>
                Documents
                :
              </h4>
              PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX
            </div>
            <div
              className="emotion-19"
            >
              <h4>
                Videos
                :
              </h4>
              MP4, M4V, MOV, MPG, MPEG, OGG
            </div>
          </div>
        </div>
      </div>
    </legend>
    <div
      className="emotion-22"
    >
      <div>
        Additional file types can be added to this data source. Previous selections cannot be removed.
      </div>
    </div>
    <div
      className="emotion-23"
    />
    <label
      className="emotion-24"
    >
      <div
        className="emotion-25"
      >
        <input
          className="emotion-26"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Images"
        />
        <div
          className="emotion-27"
        >
          <svg
            className="emotion-28"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-29"
      >
        <svg
          color="#ebb52e"
          data-file-name="images.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-30"
      >
        <span
          className="emotion-31"
        >
          Image Files
        </span>
      </div>
    </label>
    <label
      className="emotion-24"
    >
      <div
        className="emotion-25"
      >
        <input
          className="emotion-26"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Documents"
        />
        <div
          className="emotion-27"
        >
          <svg
            className="emotion-28"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-29"
      >
        <svg
          color="#00bdc1"
          data-file-name="documents.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-30"
      >
        <span
          className="emotion-31"
        >
          Documents (PDF & MS Office)
        </span>
        <span
          className="emotion-40"
        >
          Pages will be processed and counted as individual assets
        </span>
      </div>
    </label>
    <label
      className="emotion-41"
    >
      <div
        className="emotion-25"
      >
        <input
          className="emotion-43"
          defaultChecked={true}
          onClick={[Function]}
          type="checkbox"
          value="Videos"
        />
        <div
          className="emotion-44"
        >
          <svg
            className="emotion-45"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-29"
      >
        <svg
          color="#8f89e7"
          data-file-name="videos.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-30"
      >
        <span
          className="emotion-31"
        >
          Video Files
        </span>
      </div>
    </label>
  </fieldset>
  <div
    className="emotion-49"
  />
  <h3
    className="emotion-3"
  >
    STEP 3: Add Additional Analysis
  </h3>
  <p
    className="emotion-51"
  >
    Additional analysis can be added to this data source. Previous selections cannot be removed.
  </p>
  <div
    className="emotion-52"
  >
    <details
      className="emotion-53"
      onToggle={[Function]}
      open={true}
    >
      <summary
        aria-label="Zorroa Automatic Analysis"
        className="emotion-54"
      >
        <div
          className="emotion-55"
        >
          <svg
            className="emotion-56"
            data-file-name="chevron.svg"
            height={20}
          />
          <span
            className="emotion-57"
          >
            Zorroa Automatic Analysis
          </span>
        </div>
      </summary>
      <div
        className="emotion-58"
      >
        <p
          className="emotion-59"
        >
          The following basic analysis is applied to all data sets.
        </p>
        <ul
          className="emotion-60"
        >
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                File Introspection
              </span>
              <br />
              Extracts native metadata from file.
            </div>
          </li>
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                Similarity Hash
              </span>
              <br />
              Adds a hash to all images used to quantify the similarity between images.
            </div>
          </li>
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                Proxy Creation
              </span>
              <br />
              Creates proxy files suitable for web streaming for all media.
            </div>
          </li>
        </ul>
      </div>
    </details>
  </div>
  <div
    className="emotion-61"
  >
    <details
      className="emotion-53"
      onToggle={[Function]}
      open={true}
    >
      <summary
        aria-label="zorroa"
        className="emotion-54"
      >
        <div
          className="emotion-55"
        >
          <svg
            className="emotion-56"
            data-file-name="chevron.svg"
            height={20}
          />
          <span
            className="emotion-66"
          >
            <img
              alt="zorroa"
              height={32}
              src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDMuMyAzMCI+CiAgPHBhdGggZD0iTTExLjMgMGwxMS45IDQuNy0uOCAxLjd6bS0uMy45TDIzLjUgOGwtNy40IDEyLjctMi40LTEuNiA3LjgtOS42eiIgZmlsbD0iI2ZmZmZmZiIvPgogIDxwYXRoIGQ9Ik05LjQuOGwxMC44IDkuMS05LjcgMTEtMS44LTEuNyA5LjYtOC4zeiIgZmlsbD0iI2I4ZDY1MiIvPgogIDxwYXRoIGQ9Ik0xMy43IDkuNEwxLjEgMTEuOGwuNCAxLjd6bS0uMSAxTDAgMTQuOWw0LjcgMTMuOSAyLjgtMS4xLTUuOC0xMXoiIGZpbGw9IiNmZmZmZmYiLz4KICA8cGF0aCBkPSJNMTUuMSAxMC41TDIuOSAxNy40IDEwLjMgMzBsMi4xLTEuMy03LjktMTB6IiBmaWxsPSIjYjhkNjUyIi8+CiAgPHBhdGggZmlsbD0iI2ZmZiIgZD0iTTk5LjMgMTAuN2gtMmwtMy45IDkuOWgybDEtMi40aDMuOGwxIDIuNGgybC0zLjktOS45em0uMyA1LjhIOTdsMS4zLTMuOSAxLjMgMy45em0tMjIuMy0xLjJjLjQtLjUuNi0xIC42LTEuNyAwLTEtLjUtMS43LTEuMy0yLjMtLjYtLjMtMS41LS41LTIuNi0uNWgtNC4zdjkuOWgxLjl2LTQuMWgyLjZsMiA0LjFoMkw3NiAxNi4yYy41LS4yLjktLjUgMS4zLS45ek03NiAxMy42YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOUg3NGMuNiAwIDEgLjEgMS40LjIuNC40LjYuNy42IDEuMnptLTExIDEuN2MuNC0uNS42LTEgLjYtMS43IDAtMS0uNS0xLjctMS4zLTIuMy0uNi0uNC0xLjUtLjYtMi42LS42aC00LjN2OS45aDEuOXYtNC4xSDYybDIgNC4xaDJsLTIuMi00LjRjLjUtLjIuOS0uNSAxLjItLjl6bS0xLjMtMS43YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOWgyLjVjLjYgMCAxIC4xIDEuNC4yLjUuNC42LjcuNiAxLjJ6bS0yMy0xLjd2LTEuMmgtNy44djEuNWg1LjRsLTUuNiA3djEuNGg4LjF2LTEuNUgzNXptMTAuMi0xYy00LTEuNC03LjkgMi41LTYuNSA2LjUuNSAxLjUgMS43IDIuNiAzLjEgMy4xIDQgMS40IDcuOS0yLjUgNi41LTYuNS0uNS0xLjQtMS43LTIuNi0zLjEtMy4xem0xLjYgNGMuNiAyLjQtMS42IDQuNy00LjEgNC4xLTEuMi0uMy0yLjEtMS4yLTIuNC0yLjQtLjYtMi40IDEuNi00LjcgNC4xLTQuMSAxLjEuMyAyIDEuMiAyLjQgMi40em0zNS40LTRjLTQtMS40LTcuOSAyLjUtNi41IDYuNS41IDEuNSAxLjcgMi42IDMuMSAzLjEgNCAxLjQgNy45LTIuNSA2LjUtNi41LS41LTEuNC0xLjctMi42LTMuMS0zLjF6bTEuNSA0Yy42IDIuNC0xLjYgNC43LTQuMSA0LjEtMS4yLS4zLTIuMS0xLjItMi40LTIuNC0uNi0yLjQgMS42LTQuNyA0LjEtNC4xIDEuMS4zIDIuMSAxLjIgMi40IDIuNHoiLz4KPC9zdmc+Cg=="
            />
          </span>
        </div>
      </summary>
      <div
        className="emotion-58"
      >
        <p
          className="emotion-68"
        >
          These analysis modules are included in your base package. You can run as many as you’d like, but running more than you need will increase processing time.
        </p>
        <fieldset
          className="emotion-69"
        >
          <legend
            className="emotion-70"
          >
            Visual Intelligence
          </legend>
          <div
            className="emotion-71"
          />
          <table
            className="emotion-72"
          >
            <thead>
              <tr>
                <th>
                   
                </th>
                <th>
                  Module Name
                </th>
                <th>
                  Description
                </th>
                <th>
                  File Types
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-73"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-74"
                  >
                    <div
                      className="emotion-25"
                    >
                      <input
                        className="emotion-43"
                        defaultChecked={true}
                        onClick={[Function]}
                        type="checkbox"
                        value="gcp-label-detection"
                      />
                      <div
                        className="emotion-44"
                      >
                        <svg
                          className="emotion-45"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      gcp-label-detection
                      : 
                      Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                    </div>
                  </label>
                </td>
                <td>
                  gcp-label-detection
                </td>
                <td>
                  Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                </td>
                <td>
                  <div
                    className="emotion-79"
                  >
                    <svg
                      className="emotion-80"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-80"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-82"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-74"
                  >
                    <div
                      className="emotion-25"
                    >
                      <input
                        className="emotion-26"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="gcp-object-detection"
                      />
                      <div
                        className="emotion-27"
                      >
                        <svg
                          className="emotion-28"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      gcp-object-detection
                      : 
                      Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                    </div>
                  </label>
                </td>
                <td>
                  gcp-object-detection
                </td>
                <td>
                  Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                </td>
                <td>
                  <div
                    className="emotion-79"
                  >
                    <svg
                      className="emotion-80"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-80"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-82"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-74"
                  >
                    <div
                      className="emotion-25"
                    >
                      <input
                        className="emotion-26"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="zvi-label-detection"
                      />
                      <div
                        className="emotion-27"
                      >
                        <svg
                          className="emotion-28"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      zvi-label-detection
                      : 
                      Generate keyword labels for image, video, and documents.
                    </div>
                  </label>
                </td>
                <td>
                  zvi-label-detection
                </td>
                <td>
                  Generate keyword labels for image, video, and documents.
                </td>
                <td>
                  <div
                    className="emotion-79"
                  >
                    <svg
                      className="emotion-80"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-80"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-82"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-74"
                  >
                    <div
                      className="emotion-25"
                    >
                      <input
                        className="emotion-26"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="zvi-object-detection"
                      />
                      <div
                        className="emotion-27"
                      >
                        <svg
                          className="emotion-28"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      zvi-object-detection
                      : 
                      Detect everyday objects in images, video, and documents.
                    </div>
                  </label>
                </td>
                <td>
                  zvi-object-detection
                </td>
                <td>
                  Detect everyday objects in images, video, and documents.
                </td>
                <td>
                  <div
                    className="emotion-79"
                  >
                    <svg
                      className="emotion-80"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-80"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </fieldset>
        <fieldset
          className="emotion-69"
        >
          <legend
            className="emotion-70"
          >
            Zorroa Timeline Extraction
          </legend>
          <div
            className="emotion-71"
          />
          <table
            className="emotion-72"
          >
            <thead>
              <tr>
                <th>
                   
                </th>
                <th>
                  Module Name
                </th>
                <th>
                  Description
                </th>
                <th>
                  File Types
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-82"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-74"
                  >
                    <div
                      className="emotion-25"
                    >
                      <input
                        className="emotion-26"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="zvi-video-shot-clips"
                      />
                      <div
                        className="emotion-27"
                      >
                        <svg
                          className="emotion-28"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      zvi-video-shot-clips
                      : 
                      Break video files into individual assets based on a shot detection algorithm.
                    </div>
                  </label>
                </td>
                <td>
                  zvi-video-shot-clips
                </td>
                <td>
                  Break video files into individual assets based on a shot detection algorithm.
                </td>
                <td>
                  <div
                    className="emotion-79"
                  >
                    <svg
                      className="emotion-80"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-80"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </fieldset>
      </div>
    </details>
  </div>
  <div
    className="emotion-122"
  >
    <a
      className="emotion-123"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Cancel
    </a>
    <button
      aria-disabled={true}
      className="emotion-124"
      onClick={[Function]}
      type="submit"
    >
      Update Data Source
    </button>
  </div>
</form>
`;

exports[`<DataSourcesEditForm /> should render properly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
}

.emotion-1 {
  margin-top: 0;
  max-width: 600px;
  color: #b3b3b3;
}

.emotion-2 {
  width: 470px;
  padding-bottom: 24px;
}

.emotion-3 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-5 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-6 {
  position: relative;
}

.emotion-7 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-7:focus,
.emotion-7 .noop {
  border: 2px solid #73b61c;
  outline: #73b61c;
  color: #000000;
  background-color: #ffffff;
}

.emotion-7:hover,
.emotion-7 .noop {
  border: 2px solid #ffffff;
}

.emotion-8 {
  padding-top: 8px;
}

.emotion-10 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-11 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-12:hover div,
.emotion-12:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-12:hover button,
.emotion-12:focus-within button {
  color: #ffffff;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-14 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-14:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-15:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-16 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-17 {
  font-size: 15px;
  line-height: 19px;
  padding-bottom: 8px;
}

.emotion-18 {
  padding-bottom: 8px;
}

.emotion-21 {
  clear: both;
  padding-bottom: 16px;
  color: #b3b3b3;
}

.emotion-22 {
  clear: both;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-bottom: 16px;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-25 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-26 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-27 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-28 {
  padding-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 16px;
}

.emotion-30 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-39 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-bottom: 16px;
}

.emotion-42 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: none;
  border-radius: 2px;
  cursor: not-allowed;
}

.emotion-43 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
}

.emotion-44 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
  fill: #73b61c;
}

.emotion-48 {
  height: 8px;
}

.emotion-50 {
  margin: 0;
  padding-top: 8px;
  color: #b3b3b3;
}

.emotion-51 {
  padding-top: 16px;
}

.emotion-52 {
  border-radius: 2px;
  background-color: #3b3b3b;
}

.emotion-52:hover summary svg {
  opacity: 1;
}

.emotion-53 {
  list-style-type: none;
  padding: 16px;
  background-color: #3b3b3b;
}

.emotion-53::-webkit-details-marker {
  display: none;
}

.emotion-53:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-54 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-55 {
  color: #808080;
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-56 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: -2px;
  padding-left: 16px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-57 {
  border-top: 1px solid #4a4a4a;
  padding: 32px;
  padding-top: 16px;
}

.emotion-58 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-59 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 8px;
}

.emotion-59 li {
  width: 33%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
}

.emotion-59 svg {
  color: #73b61c;
  margin-right: 16px;
  min-width: 20px;
  max-width: 20px;
}

.emotion-59 span {
  font-weight: 700;
  color: #ffffff;
}

.emotion-60 {
  padding-top: 16px;
}

.emotion-65 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
}

.emotion-67 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  max-width: 600px;
}

.emotion-68 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 32px;
}

.emotion-69 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-70 {
  clear: both;
}

.emotion-71 {
  color: #ffffff;
  text-align: left;
}

.emotion-71 th,
.emotion-71 td {
  padding: 16px;
  padding-left: 0;
}

.emotion-71 th:first-of-type,
.emotion-71 td:first-of-type {
  padding-left: 16px;
}

.emotion-71 th:nth-of-type(2),
.emotion-71 td:nth-of-type(2) {
  min-width: 300px;
}

.emotion-71 th:nth-of-type(3),
.emotion-71 td:nth-of-type(3) {
  width: 100%;
}

.emotion-71 th {
  color: #b3b3b3;
  font-weight: 500;
  white-space: nowrap;
}

.emotion-71 td {
  border-top: 1px solid #4a4a4a;
  vertical-align: top;
}

.emotion-71 td:first-of-type {
  border: none;
}

.emotion-71 td:nth-of-type(2) {
  font-family: Roboto Mono;
}

.emotion-71 tr:hover td {
  background-color: #4a4a4a;
}

.emotion-71 tr:hover+tr td {
  border-top-color: transparent;
}

.emotion-71 tr:last-of-type td {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-71 tr:last-of-type td:first-of-type {
  border: none;
}

.emotion-72 {
  cursor: not-allowed;
}

.emotion-73 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

.emotion-78 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-79 {
  margin-right: 16px;
}

.emotion-81 {
  cursor: pointer;
}

.emotion-121 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-121 button,
.emotion-121 a {
  margin-right: 16px;
}

.emotion-122 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-122,
.emotion-122:hover,
.emotion-122:visited,
.emotion-122 .noop {
  background-color: #808080;
}

.emotion-122:hover,
.emotion-122 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-122[aria-disabled=true],
.emotion-122 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-123 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-123,
.emotion-123:hover,
.emotion-123:visited,
.emotion-123 .noop {
  background-color: #73b61c;
}

.emotion-123:hover,
.emotion-123 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-123[aria-disabled=true],
.emotion-123 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
  action=""
  className="emotion-0"
  method="post"
  onSubmit={[Function]}
>
  <p
    className="emotion-1"
  >
    Additional file types or analysis modules can be added to this data source. All previous selections will remain constant and cannot be modified.
  </p>
  <div
    className="emotion-2"
  >
    <h3
      className="emotion-3"
    >
      STEP 1: Data Source Name 
    </h3>
    <div
      className="emotion-4"
    >
      <label
        className="emotion-5"
        htmlFor="name"
      >
        Name
      </label>
      <div
        className="emotion-6"
      >
        <input
          autoFocus={true}
          className="emotion-7"
          disabled={false}
          id="name"
          name="name"
          onChange={[Function]}
          type="text"
          value="test"
        />
      </div>
      <div
        className="emotion-8"
      >
         
      </div>
    </div>
    <h3
      className="emotion-3"
    >
      Storage Address: gs://zorroa-dev-data/images
    </h3>
  </div>
  <fieldset
    className="emotion-10"
  >
    <legend
      className="emotion-11"
    >
      STEP 2: Add Additional File Types
      <div
        className="emotion-12"
      >
        <button
          aria-details="SupportedFile Types"
          aria-label="Supported File Types"
          className="emotion-13"
          type="button"
        >
          <svg
            data-file-name="help.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-14"
          id="SupportedFile Types"
          role="tooltip"
        >
          <div
            className="emotion-15"
          />
          <div
            className="emotion-16"
          >
            <h3
              className="emotion-17"
            >
              Supported File Types
            </h3>
            <div
              className="emotion-18"
            >
              <h4>
                Images
                :
              </h4>
              GIF, PNG, JPG, JPEG, TIF, TIFF, PSD
            </div>
            <div
              className="emotion-18"
            >
              <h4>
                Documents
                :
              </h4>
              PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX
            </div>
            <div
              className="emotion-18"
            >
              <h4>
                Videos
                :
              </h4>
              MP4, M4V, MOV, MPG, MPEG, OGG
            </div>
          </div>
        </div>
      </div>
    </legend>
    <div
      className="emotion-21"
    >
      <div>
        Additional file types can be added to this data source. Previous selections cannot be removed.
      </div>
    </div>
    <div
      className="emotion-22"
    />
    <label
      className="emotion-23"
    >
      <div
        className="emotion-24"
      >
        <input
          className="emotion-25"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Images"
        />
        <div
          className="emotion-26"
        >
          <svg
            className="emotion-27"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-28"
      >
        <svg
          color="#ebb52e"
          data-file-name="images.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-29"
      >
        <span
          className="emotion-30"
        >
          Image Files
        </span>
      </div>
    </label>
    <label
      className="emotion-23"
    >
      <div
        className="emotion-24"
      >
        <input
          className="emotion-25"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Documents"
        />
        <div
          className="emotion-26"
        >
          <svg
            className="emotion-27"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-28"
      >
        <svg
          color="#00bdc1"
          data-file-name="documents.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-29"
      >
        <span
          className="emotion-30"
        >
          Documents (PDF & MS Office)
        </span>
        <span
          className="emotion-39"
        >
          Pages will be processed and counted as individual assets
        </span>
      </div>
    </label>
    <label
      className="emotion-40"
    >
      <div
        className="emotion-24"
      >
        <input
          className="emotion-42"
          defaultChecked={true}
          onClick={[Function]}
          type="checkbox"
          value="Videos"
        />
        <div
          className="emotion-43"
        >
          <svg
            className="emotion-44"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-28"
      >
        <svg
          color="#8f89e7"
          data-file-name="videos.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-29"
      >
        <span
          className="emotion-30"
        >
          Video Files
        </span>
      </div>
    </label>
  </fieldset>
  <div
    className="emotion-48"
  />
  <h3
    className="emotion-3"
  >
    STEP 3: Add Additional Analysis
  </h3>
  <p
    className="emotion-50"
  >
    Additional analysis can be added to this data source. Previous selections cannot be removed.
  </p>
  <div
    className="emotion-51"
  >
    <details
      className="emotion-52"
      onToggle={[Function]}
      open={true}
    >
      <summary
        aria-label="Zorroa Automatic Analysis"
        className="emotion-53"
      >
        <div
          className="emotion-54"
        >
          <svg
            className="emotion-55"
            data-file-name="chevron.svg"
            height={20}
          />
          <span
            className="emotion-56"
          >
            Zorroa Automatic Analysis
          </span>
        </div>
      </summary>
      <div
        className="emotion-57"
      >
        <p
          className="emotion-58"
        >
          The following basic analysis is applied to all data sets.
        </p>
        <ul
          className="emotion-59"
        >
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                File Introspection
              </span>
              <br />
              Extracts native metadata from file.
            </div>
          </li>
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                Similarity Hash
              </span>
              <br />
              Adds a hash to all images used to quantify the similarity between images.
            </div>
          </li>
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                Proxy Creation
              </span>
              <br />
              Creates proxy files suitable for web streaming for all media.
            </div>
          </li>
        </ul>
      </div>
    </details>
  </div>
  <div
    className="emotion-60"
  >
    <details
      className="emotion-52"
      onToggle={[Function]}
      open={true}
    >
      <summary
        aria-label="zorroa"
        className="emotion-53"
      >
        <div
          className="emotion-54"
        >
          <svg
            className="emotion-55"
            data-file-name="chevron.svg"
            height={20}
          />
          <span
            className="emotion-65"
          >
            <img
              alt="zorroa"
              height={32}
              src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDMuMyAzMCI+CiAgPHBhdGggZD0iTTExLjMgMGwxMS45IDQuNy0uOCAxLjd6bS0uMy45TDIzLjUgOGwtNy40IDEyLjctMi40LTEuNiA3LjgtOS42eiIgZmlsbD0iI2ZmZmZmZiIvPgogIDxwYXRoIGQ9Ik05LjQuOGwxMC44IDkuMS05LjcgMTEtMS44LTEuNyA5LjYtOC4zeiIgZmlsbD0iI2I4ZDY1MiIvPgogIDxwYXRoIGQ9Ik0xMy43IDkuNEwxLjEgMTEuOGwuNCAxLjd6bS0uMSAxTDAgMTQuOWw0LjcgMTMuOSAyLjgtMS4xLTUuOC0xMXoiIGZpbGw9IiNmZmZmZmYiLz4KICA8cGF0aCBkPSJNMTUuMSAxMC41TDIuOSAxNy40IDEwLjMgMzBsMi4xLTEuMy03LjktMTB6IiBmaWxsPSIjYjhkNjUyIi8+CiAgPHBhdGggZmlsbD0iI2ZmZiIgZD0iTTk5LjMgMTAuN2gtMmwtMy45IDkuOWgybDEtMi40aDMuOGwxIDIuNGgybC0zLjktOS45em0uMyA1LjhIOTdsMS4zLTMuOSAxLjMgMy45em0tMjIuMy0xLjJjLjQtLjUuNi0xIC42LTEuNyAwLTEtLjUtMS43LTEuMy0yLjMtLjYtLjMtMS41LS41LTIuNi0uNWgtNC4zdjkuOWgxLjl2LTQuMWgyLjZsMiA0LjFoMkw3NiAxNi4yYy41LS4yLjktLjUgMS4zLS45ek03NiAxMy42YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOUg3NGMuNiAwIDEgLjEgMS40LjIuNC40LjYuNy42IDEuMnptLTExIDEuN2MuNC0uNS42LTEgLjYtMS43IDAtMS0uNS0xLjctMS4zLTIuMy0uNi0uNC0xLjUtLjYtMi42LS42aC00LjN2OS45aDEuOXYtNC4xSDYybDIgNC4xaDJsLTIuMi00LjRjLjUtLjIuOS0uNSAxLjItLjl6bS0xLjMtMS43YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOWgyLjVjLjYgMCAxIC4xIDEuNC4yLjUuNC42LjcuNiAxLjJ6bS0yMy0xLjd2LTEuMmgtNy44djEuNWg1LjRsLTUuNiA3djEuNGg4LjF2LTEuNUgzNXptMTAuMi0xYy00LTEuNC03LjkgMi41LTYuNSA2LjUuNSAxLjUgMS43IDIuNiAzLjEgMy4xIDQgMS40IDcuOS0yLjUgNi41LTYuNS0uNS0xLjQtMS43LTIuNi0zLjEtMy4xem0xLjYgNGMuNiAyLjQtMS42IDQuNy00LjEgNC4xLTEuMi0uMy0yLjEtMS4yLTIuNC0yLjQtLjYtMi40IDEuNi00LjcgNC4xLTQuMSAxLjEuMyAyIDEuMiAyLjQgMi40em0zNS40LTRjLTQtMS40LTcuOSAyLjUtNi41IDYuNS41IDEuNSAxLjcgMi42IDMuMSAzLjEgNCAxLjQgNy45LTIuNSA2LjUtNi41LS41LTEuNC0xLjctMi42LTMuMS0zLjF6bTEuNSA0Yy42IDIuNC0xLjYgNC43LTQuMSA0LjEtMS4yLS4zLTIuMS0xLjItMi40LTIuNC0uNi0yLjQgMS42LTQuNyA0LjEtNC4xIDEuMS4zIDIuMSAxLjIgMi40IDIuNHoiLz4KPC9zdmc+Cg=="
            />
          </span>
        </div>
      </summary>
      <div
        className="emotion-57"
      >
        <p
          className="emotion-67"
        >
          These analysis modules are included in your base package. You can run as many as you’d like, but running more than you need will increase processing time.
        </p>
        <fieldset
          className="emotion-68"
        >
          <legend
            className="emotion-69"
          >
            Visual Intelligence
          </legend>
          <div
            className="emotion-70"
          />
          <table
            className="emotion-71"
          >
            <thead>
              <tr>
                <th>
                   
                </th>
                <th>
                  Module Name
                </th>
                <th>
                  Description
                </th>
                <th>
                  File Types
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-72"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-73"
                  >
                    <div
                      className="emotion-24"
                    >
                      <input
                        className="emotion-42"
                        defaultChecked={true}
                        onClick={[Function]}
                        type="checkbox"
                        value="gcp-label-detection"
                      />
                      <div
                        className="emotion-43"
                      >
                        <svg
                          className="emotion-44"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      gcp-label-detection
                      : 
                      Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                    </div>
                  </label>
                </td>
                <td>
                  gcp-label-detection
                </td>
                <td>
                  Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                </td>
                <td>
                  <div
                    className="emotion-78"
                  >
                    <svg
                      className="emotion-79"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-79"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-81"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-73"
                  >
                    <div
                      className="emotion-24"
                    >
                      <input
                        className="emotion-25"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="gcp-object-detection"
                      />
                      <div
                        className="emotion-26"
                      >
                        <svg
                          className="emotion-27"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      gcp-object-detection
                      : 
                      Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                    </div>
                  </label>
                </td>
                <td>
                  gcp-object-detection
                </td>
                <td>
                  Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                </td>
                <td>
                  <div
                    className="emotion-78"
                  >
                    <svg
                      className="emotion-79"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-79"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-81"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-73"
                  >
                    <div
                      className="emotion-24"
                    >
                      <input
                        className="emotion-25"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="zvi-label-detection"
                      />
                      <div
                        className="emotion-26"
                      >
                        <svg
                          className="emotion-27"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      zvi-label-detection
                      : 
                      Generate keyword labels for image, video, and documents.
                    </div>
                  </label>
                </td>
                <td>
                  zvi-label-detection
                </td>
                <td>
                  Generate keyword labels for image, video, and documents.
                </td>
                <td>
                  <div
                    className="emotion-78"
                  >
                    <svg
                      className="emotion-79"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-79"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-81"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-73"
                  >
                    <div
                      className="emotion-24"
                    >
                      <input
                        className="emotion-25"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="zvi-object-detection"
                      />
                      <div
                        className="emotion-26"
                      >
                        <svg
                          className="emotion-27"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      zvi-object-detection
                      : 
                      Detect everyday objects in images, video, and documents.
                    </div>
                  </label>
                </td>
                <td>
                  zvi-object-detection
                </td>
                <td>
                  Detect everyday objects in images, video, and documents.
                </td>
                <td>
                  <div
                    className="emotion-78"
                  >
                    <svg
                      className="emotion-79"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-79"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </fieldset>
        <fieldset
          className="emotion-68"
        >
          <legend
            className="emotion-69"
          >
            Zorroa Timeline Extraction
          </legend>
          <div
            className="emotion-70"
          />
          <table
            className="emotion-71"
          >
            <thead>
              <tr>
                <th>
                   
                </th>
                <th>
                  Module Name
                </th>
                <th>
                  Description
                </th>
                <th>
                  File Types
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-81"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-73"
                  >
                    <div
                      className="emotion-24"
                    >
                      <input
                        className="emotion-25"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="zvi-video-shot-clips"
                      />
                      <div
                        className="emotion-26"
                      >
                        <svg
                          className="emotion-27"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      zvi-video-shot-clips
                      : 
                      Break video files into individual assets based on a shot detection algorithm.
                    </div>
                  </label>
                </td>
                <td>
                  zvi-video-shot-clips
                </td>
                <td>
                  Break video files into individual assets based on a shot detection algorithm.
                </td>
                <td>
                  <div
                    className="emotion-78"
                  >
                    <svg
                      className="emotion-79"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-79"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </fieldset>
      </div>
    </details>
  </div>
  <div
    className="emotion-121"
  >
    <a
      className="emotion-122"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Cancel
    </a>
    <button
      className="emotion-123"
      onClick={[Function]}
      type="submit"
    >
      Update Data Source
    </button>
  </div>
</form>
`;
